Fix autosuggest backdrop + header styling
So that the backdrop doesn't overlap the header

--- a/src/stories/Blocks/autosuggest/autosuggest.scss
+++ b/src/stories/Blocks/autosuggest/autosuggest.scss
@@ -13,13 +13,12 @@
 }
 
 .autosuggest-backdrop {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: $color__global-black;
   opacity: 0.5;
   z-index: $z-5;
-  pointer-events: none;
 }
