--- a/src/stories/Blocks/header/header.scss
+++ b/src/stories/Blocks/header/header.scss
@@ -7,11 +7,13 @@
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 500ms;
+  z-index: $z-10;
 }
 
 .header__logo-desktop {
   border-right: 1px solid $color__global-tertiary-1;
   z-index: $z-10;
+  background-color: $color__global-primary;
 }
 
 .header__menu {
@@ -23,6 +25,8 @@
   border-bottom: 1px solid $color__global-tertiary-1;
   display: grid;
   grid-template-columns: 1fr auto auto;
+  z-index: $z-10;
+  background-color: $color__global-primary;
 }
 
 .header__menu-navigation-logo {
@@ -144,7 +148,6 @@
   height: 100%;
   padding: 0 $s-lg;
   border: 0 solid transparent;
-  background-color: transparent;
 
   ::placeholder {
     color: $color__text-secondary-gray;
@@ -154,6 +157,7 @@
     background-color: $color__global-white;
     border: 0 solid transparent;
     outline: none;
+    z-index: $z-10;
   }
 }
 
@@ -207,6 +211,7 @@
   right: $s-lg;
   transition: transform 0.3s ease-in-out;
   transform: scaleY(1);
+  z-index: $z-10;
 
   &.header__menu-dropdown-icon--expanded {
     transition: transform 0.3s ease-in-out;
@@ -218,6 +223,8 @@
   height: 100%;
   border-left: 1px solid $color__global-tertiary-1;
   display: none;
+  z-index: $z-10;
+  background-color: $color__global-primary;
 
   @include media-query__small {
     display: block;
